--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-# Vector Database
-chromadb
-pinecone-client
-weaviate-client
-faiss-cpu
-
-
 # Embeddings and ML
 sentence-transformers
 torch
@@ -29,3 +22,7 @@ jupyter
 
 rank-bm25
 
+# Langchain
+langchain
+langchain-openai
+langchain-chroma
